--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "lucide-react": "^0.552.0",
+    "motion": "^12.23.24",
     "radix-ui": "^1.4.3",
     "react": "^19",
     "react-dom": "^19",
