fix: Update preview script to include compatibility date

--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "build": "remix vite:build",
     "build:cf": "remix vite:build",
     "deploy": "bun run build:cf && wrangler pages deploy ./build/client",
-    "preview": "wrangler pages dev ./build/client",
+    "preview": "wrangler pages dev ./build/client --compatibility-date=2024-12-25",
     "start": "bun run server.ts",
     "typecheck": "tsc"
   },
