fix: Refine deploy and preview scripts for improved functionality

--- a/package.json
+++ b/package.json
@@ -6,9 +6,8 @@
   "scripts": {
     "dev": "remix vite:dev",
     "build": "remix vite:build",
-    "build:cf": "remix vite:build",
-    "deploy": "wrangler login && bun run build:cf && wrangler pages deploy ./build/client --project-name=web-fortunemusic-waiting-room",
-    "preview": "wrangler pages dev ./build/client --compatibility-date=2024-12-25",
+    "deploy": "bun run build && wrangler login && wrangler pages deploy ./build/client --project-name=web-fortunemusic-waiting-room",
+    "preview": "wrangler login && && wrangler pages dev ./build/client --compatibility-date=2024-12-25",
     "start": "bun run server.ts",
     "typecheck": "tsc"
   },
